--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.10.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
